service-apache.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache-svc
spec:
  selector:
    role: app-apache
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
